<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="image_start">Image start</string>
    <string name="start">Start</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">Upcoming exercise:</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="finish">FINISH</string>
    <string name="done_image">done image</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">Metric Units</string>
    <string name="us_units">US Units</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="weight_in_pounds">Weight (in pounds)</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>