<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/main_screen_layout_padding"
    android:background="@color/grayBG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        android:src="@drawable/img_main_page_roxo"
        android:contentDescription="@string/image_start"/>

    <android.widget.Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_start_button"
        />

    <android.widget.Button
        android:id="@+id/btnBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/bmi"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/item_circular_color_accent_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/calculator"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>