<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity"
    android:background="@color/grayBG">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMI"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/grayBG"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBMI"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/rbUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        android:textColorHint="@color/white"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        android:textColorHint="@color/white"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        android:textColorHint="@color/white"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_pounds"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitHeightFeet"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUSUnitWeight"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/view"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        android:textColorHint="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitHeightFeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitHeightInch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/view"
        android:layout_below="@id/tilUSUnitWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        android:textColorHint="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitHeightInch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inch"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitHeight"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi"
            android:textColor="@color/light_gray_ripple"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="22.54"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Overweight"
            android:textColor="@color/light_gray_ripple"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="You gotta workout and eat better!"
            android:textColor="@color/light_gray_ripple"
            android:textSize="18sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDisplayBMIResult"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color_accent"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textSize="18sp" />


</RelativeLayout>